# mycode_kali

./: .gitconfig  .gitignore  .gitmodules  .zshrc  .zshrc_old_0306  Makefile  Newifi3 D2  README.md  common.mk  makeInternelVar.mk  newMakeProcess.mk  practice.cpp  test.db  version.c  wait.c
C++ProgramDesign_src/: 1-2.cpp  10-1.cpp  10-3.cpp  10-5.cpp  12-3.cpp  12-4.cpp  13-6.cpp  14-1.cpp  14-3.cpp  14-4.cpp  14-5.cpp  3-1.cpp  3-2.cpp  3-3.cpp  3-4.cpp  3-6.cpp  4-1.cpp  4-10.cpp  4-11.cpp  4-12.cpp  4-3.cpp  4-4.cpp  4-5.cpp  4-6.cpp  4-7.cpp  4-8.cpp  4-9.cpp  5-2.cpp  6-1.cpp  6-10.cpp  6-11.cpp  6-12.cpp  6-13.cpp  6-14.cpp  6-15.cpp  6-16.cpp  6-17.cpp  6-18.cpp  6-22.cpp  6-23.cpp  (+20 more)
C++_API_Design_src/: CMakeLists.txt
C++语言程序设计代码下载/: mass_mv.sh  程序清单1-1.cpp  程序清单1-2.cpp  程序清单10-1.cpp  程序清单10-2.cpp  程序清单10-3.cpp  程序清单10-4.cpp  程序清单10-5.cpp  程序清单11-1.cpp  程序清单11-3.cpp  程序清单12-1.cpp  程序清单12-2.cpp  程序清单12-3.cpp  程序清单12-5.cpp  程序清单12-6.cpp  程序清单13-1.cpp  程序清单13-2.cpp  程序清单13-3.cpp  程序清单13-4.cpp  程序清单13-5.cpp  程序清单13-6.cpp  程序清单13-7.cpp  程序清单14-1.cpp  程序清单14-2.cpp  程序清单14-4.cpp  程序清单14-5.cpp  程序清单14-6.cpp  程序清单14-7.cpp  程序清单14-8.cpp  程序清单14-9.cpp  程序清单3-1.cpp  程序清单3-2.cpp  程序清单3-3.cpp  程序清单3-4.cpp  程序清单3-5.cpp  程序清单3-6.cpp  程序清单4-1.cpp  程序清单4-10.cpp  程序清单4-11.cpp  程序清单4-12.cpp  (+68 more)
GtestLearn/: CMakeCache.txt  Makefile  cmake_install.cmake  func.c  main.c
GtestLearnLLT/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Wicked_Cool_Shell_Scripts_src/: dir.c
apue.3e/: Makefile
assembler/: c_assemble.c  intel_at_t.md
c/: bitOperator.c  core_dump_test.c  dump  dump.c  float_save.c  getspnam.c  gprof_demo.c  hacker_delight.c  macro.c  rwlock.c  setbuf.c  strchr.c  toosFun.h  waitpid.c
c++/: AvlTree.h  MergeSort.h  MyDelegate.h  MyDelegate.hpp  RBTree.h  SortTestHelper.h  binSearchTree.cpp  const_enum.cpp  cplusplusObjectModel.cpp  delegate.cpp  getParam1Type.cpp  heap.cpp  heap.h  insertSort.cpp  isStandardLayout.cpp  isTrivial.cpp  macro.cpp  mem_func_pointer.cpp  merge.cpp  myDelegate.cpp  pureVirtual.cpp  selectSort.cpp  sort.cpp  startup.cpp  string.cpp  vector_string_c_api.cpp  workspace.code-workspace
c++/C++_API_Design_src/02_Qualities/callback_instance/: CMakeLists.txt
c++/template/template_algrithm/: CMakeLists.txt
c++/template/template_algrithm/include/: B_tree.h  CursorList.h  DoubleNode.h  GLNode.h  Graph.h  LinkedQueue.h  Queue.h  RedBlackTree.h  SMatrix.h  Stack_.h  TSGA.h  ThreadBinaryTree.h  ThreadBinaryTreeNode.h  dataList.h  node.h
c++/template/template_algrithm/source/: AVLTree.cpp  B_tree.cpp  BiSearchTree.cpp  BinaryTree.cpp  Calculator.cpp  CursorList.cpp  GLNode.cpp  Graph.cpp  Graph1.cpp  Graph2.cpp  HashTable.cpp  K_Merge.cpp  LinkedList.cpp  LowerMatrix.cpp  MaxHeap.cpp  PTree.cpp  Person.cpp  QuickSorter.cpp  RadixSort.cpp  RedBlackNode.cpp  SMatrix.cpp  SeqList.cpp  ShellSorter.cpp  ShortestPathFloyd.cpp  SparseMatrix1.cpp  ThreadBinaryTreeNode.cpp  TridiagonalMatrix.cpp  datalist.cpp  hanoi.cpp  llist.cpp  other.cpp  sort.cpp
c/my/: CMakeLists.txt  arr_overflow_demo.c  bitOperator.c  callBackFunc.c  create_xml.c  getopt.c  getspnam.c  gprof_demo.c  hacker_delight.c  incByTwoProcess.c  m.c  macro.c  macro.h  mem.c  memchr.c  pointer.c  scheduler.h  setvbuf.c  syslog.c  unsigned.c  utf8_to_gb2312.c  waitIfExitedWaitIfSingaled.c  wchar.c  wildPointer.c
c/my/FileIO/: read_stdin_write_stdout.c
c/my/function/: Exaustive.hpp  MonteCarlo_PI.c  alarm.c  calculatePolynomial.c  envr.c  fcntl.c  fflush.c  fpathconf.c  getpgid.c  guoer.hpp  ioctl.hpp  mtrace.c  setenv.c  setpgid.c  string.hpp  upper.c
c/my/linux_learn_c/: cat_file1_-_file2  cat_file1_-_file2.c  conditionVar_product_consumer  conditionVar_product_consumer.c  count_files_indir  count_files_indir.c  demo_cp  demo_cp.c  fcntl  fcntl.c  file_fork  file_fork.c  file_lock  file_lock.c  follow_fork  follow_fork.c  iocntl  iocntl.c  isPrimeNumber  isPrimeNumber.c  loop_fork  loop_fork.c  lseek  lseek.c  lseek_ftruncate  lseek_ftruncate.c  mmap  mmap.c  my_strtok  my_strtok.c  mydaemon  mydaemon.c  mysleep  mysleep.c  mysleep2_sigsuspend  mysleep_note  mysleep_note.c  nonblock_timeout  nonblock_timeout.c  pause_sleep  (+10 more)
c/socket/: CMakeLists.txt  client.c  client.cpp  server.c  server.cpp
c/socket/advance_network_program/broadcast/: receiver.cpp  sender.cpp
c/socket/advance_network_program/unix/dgram/: server.c
c/socket/epoll/: Makefile  client.cpp  server.cpp
c/socket/func/: SOCK_STREAM_read.c  color.h  color_test.c  ftp_connect.c  gethostbyaddr_test.c  gethostbyname_test.c  getprotobynumber_test.c  getprotoent_test.c  getservbyname_test.c  getsockopt.c
c/socket/netlink/: Makefile
c/socket/poll/: epoll.c  poll_client.c  poll_server.c
c/socket/sample/multiThread/: client.c  server.c
c/socket/sample/tcp/: client.c  server.c
c/socket/sample/udp/: server.c
c/socket/transmit/: client.c  receiver.c  sender.c  server.c
cAdvance/: 1 作业题.c  1.位移运算作业题.c  10 位运算.c  12 字符串作业1.c  2 程序的封装思想.cpp  2 结构体的基本定义.cpp  3 数据类型的本质.c  3 数组的基本练习.c  3 间接操作从1级到2级指针(1).c  4 变量的本质分析.c  4 强化练习1.c  4 指针间接赋值的例子.c  4 数组的别名.c  4 文件的结构体读写.c  4 结构体嵌套一级指针.c  5 如何定义一个数组指针.c  5 结构体的深拷贝和浅拷贝问题.c  6 二级指针.c  6 字符串copy.c  8 两头堵模型.c  8 栈的开口方向.c  a.out  config.c
c_base/: 3 C++的语言增强.cpp  7 引用的本质.cpp  9 指针引用.cpp
cmake/: CMakeLists.txt  CMakeLists.txt2  CMakeLists1.txt  build.sh
cmake/cmake/: CMakeLists.txt  build.sh  common.cmake
cmake/cmake/modules/: CMakeLists.txt
cmake/cmake/modules/CBB_Source/: CMakeLists.txt
cmake/cmake/modules/CBB_Source/CenterServer/: CMakeLists.txt
cmake/cmake/modules/alink/: CMakeLists.txt
cmake/cmake/unit_test/: CMakeLists.txt
cmake/lib/: CMakeLists.txt  hello.cpp  hello.h
cmake/libadd/: CMakeLists.txt
cmake/src/hello/: CMakeLists.txt  hello.cpp
code/: Exaustive.c  MonteCarlo_PI.c  a.c  mtrace.c  p100.cpp  p104～105.cpp  p106-2.cpp  p114-1.cpp  p114-2.cpp  p121.cpp  p122-2.cpp  p123-1.cpp  p125～128.cpp  p135～136.cpp  (+94 more)
test/GtestLearnLLT/: CMakeLists.txt  build.sh  configure  gtest_ut.cpp  key_check.cpp  key_spy.cpp  macro_exect_call.cpp  mock.cpp
(+2173 files in other folders)
