set (LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/biuld/bin)
file( GLOB_RECURSE allCSrcs RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.c)
message("files " ${allCSrcs})
foreach(src IN LISTS allCSrcs)
    string(REPLACE ".c" "" obj ${src})
    get_filename_component(tarName ${obj} NAME)
    get_filename_component(tarPath ${obj} PATH)
    message("tarPath " ${tarPath})
    set (EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/build/${tarPath})
    add_executable(${tarName} ${src})
endforeach()