CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )  #声明要求的 cmake 最低版本

SET(LIBHELLO_SRC hello.cpp)

ADD_LIBRARY(hello SHARED ${LIBHELLO_SRC})
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
message(PROJECT_BINARY_DIR=${PROJECT_BINARY_DIR})

ADD_LIBRARY(hello_static STATIC ${LIBHELLO_SRC})
SET_TARGET_PROPERTIES(hello_static PROPERTIES OUTPUT_NAME "hello")

# SET_TARGET_PROPERTIES(hello        PROPERTIES CLEAN_DIRECT_OUTPUT 1)
# SET_TARGET_PROPERTIES(hello_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)

SET_TARGET_PROPERTIES(hello PROPERTIES VERSION 1.2 SOVERSION 1)

INSTALL(TARGETS hello hello_static
       LIBRARY DESTINATION include/lib
       ARCHIVE DESTINATION include/lib)
INSTALL(FILES hello.h DESTINATION include/hello) 